import subprocess

class Actions:
    def __init__(self):
        pass

    def execute(self, discrepancies: list):
        """
        Execute actions based on discrepancies.
        For simplicity, let's just print the discrepancies for now.
        """
        for discrepancy in discrepancies:
            print(f"Discrepancy found: {discrepancy}")
            # Here, you can add code to execute specific actions based on the discrepancy.
            # For example, you can use the subprocess library to execute system commands.
            # subprocess.run(["command", "arg1", "arg2"])
            
            # Example of action based on discrepancy
            # if "specific discrepancy" in discrepancy:
            #     subprocess.run(["command", "arg1", "arg2"])
